--- a/app/Resources/views/back.html.twig
+++ b/app/Resources/views/back.html.twig
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
+            <div class="container-fluid">
               <a class="navbar-brand" href="#">AppSymfony</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,9 +51,53 @@
               </div>
   </div>
 </nav>
-        {% block body %}
-            
-        {% endblock %}
+<div class="container-fluid mt-5">
+  <div class="row">
+    <div class="col-md-3">
+      {% block breadcrumb %}{% endblock %}
+    </div>
+        <div class="col-md-9" align="right">
+          <select name="accesRapide" class="btn btn-primary">
+            <option value="">Nouveau article</option>
+            <option value="">Nouvelle categories</option>
+          </select>
+        </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <ul class="list-group">
+        <li class="list-group-item">
+          <a href="">Tableau de bord</a>
+        </li>
+        <li class="list-group-item">Categorie</li>
+        <li class="list-group-item">
+          <a href="">List des catégories</a>
+        </li>
+        <li class="list-group-item">
+            <a href="">Nouvelle catégorie</a>
+        </li>
+        <li class="list-group-item">Article</li>
+        <li class="list-group-item">
+          <a href="">List des articles</a>
+        </li>
+        <li class="list-group-item">
+          <a href="">Nouveau article</a>
+        </li>
+        <li class="list-group-item">Administration</li>
+        <li class="list-group-item">
+          <a href="">Statistique</a>
+        </li>
+        <li class="list-group-item">
+          <a href="">Paramétrage</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-9">
+        {% block body %}{% endblock %}
+    </div>
+  </div>
+</div>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
