--- a/app/Resources/views/default/admin.html.twig
+++ b/app/Resources/views/default/admin.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends '::back.html.twig' %}
 
 {% block body %}
 
@@ -8,4 +8,11 @@
 {% for role in app.user.roles %}
     <p>{{ role }}</p>
 {% endfor %}
+{% endblock %}
+
+{% block breadcrumb %}
+<ol class="breadcrumb">
+  <li class="breadcrumb-item"><a href="#">Home</a></li>
+  <li class="breadcrumb-item active">Library</li>
+</ol>
 {% endblock %}
