--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -2,8 +2,8 @@
 
 {% block fos_user_content %}
 <div class="container">
-	<div class="row">
-		<div class="col-md-6 m-auto">
+	<div class="columns is-centered">
+		<div class="column is-half">
 			{% include "@FOSUser/Registration/register_content.html.twig" %}
 		</div>
 	</div>
