--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -2,9 +2,9 @@
 
 {% block fos_user_content %}
 <div class="container">
-	<div class="row">
-		<div class="col-md-6 m-auto">
-			<h3 align="center">Se connecter</h3>
+	<div class="columns is-centered">
+		<div class="column is-two-fifths">
+			<h2 class="title is-2">Se connecter</h2>
 			{{ include('@FOSUser/Security/login_content.html.twig') }}
 		</div>
 	</div>
