--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -8,18 +8,23 @@
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
-    <div class="form-group">
-        <label for="username">{{ 'security.login.username'|trans }}</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required="required" autocomplete="username" />
+    <div class="field">
+        <label class="label" for="username">{{ 'security.login.username'|trans }}</label>
+        <div class="control">
+        <input type="text" id="username" name="_username" value="{{ last_username }}" class="input" required="required" autocomplete="username" />
+        </div>
     </div>
     
-    <div class="form-group">
-        <label for="password">{{ 'security.login.password'|trans }}</label>
-        <input type="password" id="password" name="_password" class="form-control" required="required" autocomplete="current-password" />
+    <div class="field">
+        <label class="label" for="password">{{ 'security.login.password'|trans }}</label>
+        <div class="control">
+                <input type="password" id="password" name="_password" class="input" required="required" autocomplete="current-password" />
+        </div>
+
     </div>
     
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label><br>
 
-    <input type="submit" id="_submit" class="btn btn-primary btn-block" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    <input type="submit" id="_submit" class="button is-primary" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
