--- a/app/Resources/views/category/new.html.twig
+++ b/app/Resources/views/category/new.html.twig
@@ -6,13 +6,31 @@
 
     {{ form_start(form) }}
         <div class="form-group">
-            {{ form_row(form.libelle,{'attr':{'class':'form-control'}}) }}
+            {{ form_label(form.libelle) }}
+            {% if form.libelle.vars.errors | length > 0 %}
+            {{ form_widget(form.libelle,{'required':false,'attr':{'class':'form-control is-invalid'}}) }}
+            {% else %}
+             {{ form_widget(form.libelle,{'required':false,'attr':{'class':'form-control'}}) }}
+            {% endif %}
+            <span class="text-danger">{{ form_errors(form.libelle) }}</span> 
         </div>
         <div class="form-group">
-            {{ form_row(form.description,{'attr':{'class':'form-control'}}) }}
+            {{ form_label(form.description) }}
+            {% if form.description.vars.errors | length > 0 %}
+            {{ form_widget(form.description,{'required':false,'attr':{'class':'form-control is-invalid'}}) }}
+            {% else %}
+             {{ form_widget(form.description,{'required':false,'attr':{'class':'form-control'}}) }}
+            {% endif %}            
+            <span class="text-danger">{{ form_errors(form.description) }}</span> 
         </div>
         <div class="form-group">
-            {{ form_row(form.slug,{'attr':{'class':'form-control'}}) }}
+            {{ form_label(form.slug) }}
+            {% if form.slug.vars.errors | length > 0 %}
+            {{ form_widget(form.slug,{'required':false,'attr':{'class':'form-control is-invalid'}}) }}
+            {% else %}
+             {{ form_widget(form.slug,{'required':false,'attr':{'class':'form-control'}}) }}
+            {% endif %}              
+            <span class="text-danger">{{ form_errors(form.slug) }}</span>
         </div>
         <input type="submit" value="Enregistrer" class="btn btn-primary" />
         <a class="btn btn-default" href="{{ path('category_index') }}">Retour</a>
