--- a/app/Resources/views/default/show.html.twig
+++ b/app/Resources/views/default/show.html.twig
@@ -1,23 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<section class="hero is-medium is-primary is-bold">
+
+<section class="hero is-primary is-bold">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        Mini Projet en Symfony
+        {{ post.title }}
       </h1>
       <h2 class="subtitle">
-        By SALIH Abdelkarim
+        {{ post.description }}
       </h2>
     </div>
   </div>
 </section>
 <br>
 <div class="container">
-  <div class="columns">
-  {% for post in posts %}
-        <div class="column">
+
+
+	<div class="columns">
+		 <div class="column">
           <div class="card">
             <div class="card-image">
               <figure class="image is-4by3">
@@ -33,20 +35,16 @@
                      {{ cat.libelle }},
                 {% endfor %}
                 <br>
-               <p>{{ post.description | slice(0,120)}}...</p>
+               <p>{{ post.body}}</p>
                 <br>
                 <time>{{ post.datepublication |date('Y-m-d') }}</time>
               </div>
             </div>
           </div>
         </div>
-  {% endfor %}
+	</div>
 
+	
 </div>
-</div>
-
-{% endblock %}
-
-{% block stylesheets %}
-
+    
 {% endblock %}
